k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motivation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motivation-app
  template:
    metadata:
      labels:
        app: motivation-app
    spec:
      containers:
      - name: motivation-container
        image: rauljyoti/motivation-web-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
