k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motivation-service
spec:
  type: ClusterIP
  selector:
    app: motivation-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
