k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motivation-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-duckdns
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - motivationapp.duckdns.org
      secretName: flask-tls
  rules:
    - host: motivationapp.duckdns.org
      http:
        paths:
          - path: /well-known/acme-challenge/
            pathType: Prefix
            backend:
              service: 
                name: motivation-service
                port:
                  number: 80
